--- a/Virginia_Legends_Cricket_2025_fixed (1).html
+++ b/Virginia_Legends_Cricket_2025_fixed (1).html
@@ -604,7 +604,7 @@ tr:hover {
 <script>
   function fetchAndLoadCSV() {
     // Fetch and update match results
-    fetch('match_scores.csv')
+    fetch('https:/raw.githubusercontent.com/wick1366/solid-robot/main/match_scores.csv')
       .then(response => response.text())
       .then(csvText => {
         displayResultsFromCSV(csvText);
