--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -633,8 +632,7 @@ tr:hover {
     fetch('https://raw.githubusercontent.com/Wick1366/solid-robot/main/tournament_results.csv')
       .then(response => response.text())
       .then(text => {
-        const rows = text.trim().split('
-').map(row => row.split(','));
+        const rows = text.trim().split('\n').map(row => row.split(','));
         const headers = rows[0];
         const groupIndex = headers.indexOf("Group");
         const teamIndex = headers.indexOf("Team");
